adjusting build + docker settings

--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -9,3 +9,10 @@ micronaut:
     watch:
       paths: src/main
       restart: true
+---
+micronaut:
+  router:
+    static-resources:
+      public:
+        enabled: true
+        paths: classpath:public
