--- a/client/package.json
+++ b/client/package.json
@@ -8,25 +8,26 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "axios": "^0.18.0",
-    "bootstrap-vue": "^2.0.0-rc.13",
+    "axios": "^0.19.0",
+    "bootstrap-vue": "^2.0.0-rc.22",
     "color-rainbow": "^0.0.0",
+    "core-js": "^2.6.5",
     "moment": "^2.24.0",
     "vis": "^4.21.0",
-    "vue": "^2.6.6",
-    "vue-json-editor": "^1.2.3",
-    "vue-router": "^3.0.2",
+    "vue": "^2.6.10",
+    "vue-json-editor": "^1.3.1",
+    "vue-router": "^3.0.6",
     "vuejs-logger": "^1.5.3"
   },
   "devDependencies": {
-    "@fortawesome/fontawesome-free": "^5.7.2",
-    "@vue/cli-plugin-babel": "^3.4.0",
-    "@vue/cli-plugin-eslint": "^3.4.0",
-    "@vue/cli-service": "^3.4.0",
+    "@fortawesome/fontawesome-free": "^5.9.0",
+    "@vue/cli-plugin-babel": "^3.8.0",
+    "@vue/cli-plugin-eslint": "^3.8.0",
+    "@vue/cli-service": "^3.8.0",
     "babel-eslint": "^10.0.1",
-    "eslint": "^5.8.0",
+    "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
-    "vue-template-compiler": "^2.5.21"
+    "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
     "root": true,
@@ -49,7 +50,6 @@
   },
   "browserslist": [
     "> 1%",
-    "last 2 versions",
-    "not ie <= 8"
+    "last 2 versions"
   ]
 }
